--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint ./src/** app.js database.js rotas.js server.js"
   },
   "license": "ISC",
   "devDependencies": {
