--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "accesscontrol": "^2.2.1",
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.1",
+    "esdoc": "^1.1.0",
+    "esdoc-standard-plugin": "^1.0.0",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.26.0",
